[gd_scene load_steps=4 format=3 uid="uid://cx7tsy6jkbfsy"]

[ext_resource type="PackedScene" uid="uid://7prnynnrdn4n" path="res://components/ComponentManagerView/ComponentManagerView.tscn" id="1_h4tnv"]
[ext_resource type="Script" uid="uid://cfubvlp3mdc2x" path="res://components/SettingsManagerCustomPanels/UniverseOutputEditor.gd" id="1_psxs7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_psxs7"]

[node name="UniverseOutputEditor" type="PanelContainer" node_paths=PackedStringArray("component_manager_view")]
custom_minimum_size = Vector2(0, 350)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_psxs7")
script = ExtResource("1_psxs7")
component_manager_view = NodePath("ComponentManagerView")

[node name="ComponentManagerView" parent="." instance=ExtResource("1_h4tnv")]
layout_mode = 2
classname = "DMXOutput"
table_column_names = Array[String](["name"])
component_mode = 1

[connection signal="create_requested" from="ComponentManagerView" to="." method="_on_component_manager_view_create_requested"]
[connection signal="duplicate_requested" from="ComponentManagerView" to="." method="_on_component_manager_view_duplicate_requested"]
